# modupipe

./: .gitignore  CHANGELOG.md  LICENSE  README.md  main.py  pyproject.toml  setup.cfg
.github/workflows/: build.yml
ci/: lint.sh  release.sh
examples/: custom_impl.py  mapped.py  multiprocess.py  runnables.py  simple.py
modupipe/: base.py  exceptions.py  extractor.py  loader.py  mapper.py  queue.py  runnable.py  sink.py  source.py
pipeline/: base.py  mapper.py  queue.py  runnable.py  sink.py  source.py  stream.py
tests/: extractor_test.py  loader_test.py  mapper_test.py  pipeline_test.py  queue_test.py  runnable_test.py  sink_test.py  source_test.py
