[tool.poetry]
name = "modupipe"
version = "0.3.0"
description = "A modular and extensible ETL-like pipeline builder"
authors = ["vigenere23 <lolgab1@hotmail.com>"]
keywords = ["pipeline", "etl", "pipe"]
license = "MIT"
homepage = "https://github.com/vigenere23/modupipe"
repository = "https://github.com/vigenere23/modupipe"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
black = "^22.6.0"
isort = "^5.10.1"
mypy = "^0.971"
flake8 = "^4.0.1"
pytest = "^7.1.2"
mockito = "^1.3.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
